<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".EmailValidationDemo">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        tools:context=".EmailValidationDemo"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/hostname_validation"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
             />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/label_hostname"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

        <EditText
            android:id="@+id/hostnameInput"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/validateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/buttonTextSize"
            android:text="@string/save"
            android:onClick="onValidateClick"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/text_view"
            android:layout_width="203dp"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:layout_gravity="center"/>

    </LinearLayout>
</ScrollView>
