<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".PasswordValidatorDemo">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        tools:context=".PasswordValidatorDemo"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/password_validation"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/label_password"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

        <EditText
            android:id="@+id/passwordInput"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/text_view"
            android:layout_width="203dp"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/isPassword"
            android:layout_width="316dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/buttonTextSize"
            android:text="PASSWORD PREDICATE"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/checkPassword"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/buttonTextSize"
            android:text="PASSWORD CHECKER"
            android:onClick="onValidateClick"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin" />

    </LinearLayout>
</ScrollView>
